# CurveProject

./: .gitignore  CurveProject.cabal  LaunchCurveGenerator.bat  LaunchCurveGenerator.sh  README.md  cabal.sandbox.config  curve-generation-gui.cabal  high-school-plotting.cabal  stack.yaml  todo.org
css/: style.css
high-school-plotting/: LICENSE  high-school-plotting.cabal
high-school-plotting/css/: widgets.css
high-school-plotting/src/: test.hs
high-school-plotting/src/Math/: CurveGenerator.hs  GeneratorTools.hs  PSTricksGenerator.hs  SVGGenerator.hs  TikzGenerator.hs
high-school-plotting/uiSrc/: Main.hs  Widgets.hs
src/: Main.hs  Widgets.hs  manualCompilation.sh
src/Math/: CurveGenerator.hs  GeneratorTools.hs  PSTricksGenerator.hs  SVGGenerator.hs  TikzGenerator.hs
testDir/: autosave.session
testDir/css/: style.css
uiSrc/: Main.hs  Widgets.hs
