name:                CurveProject
version:             0.2.0.0
synopsis:            Gui for the generation of usefully pedagogical math curves
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Chaddaï Fouché
maintainer:          chaddai.fouche@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
Data-Files: 	     css/style.css

executable CurveProject
  main-is:             Main.hs
  other-modules:       Widgets, Math.CurveGenerator, Math.TikzGenerator, Math.PSTricksGenerator, Math.SVGGenerator, Math.GeneratorTools
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7, diagrams-lib >= 0.7, text >=0.11, threepenny-gui >=0.3 && <0.4, data-default >= 0.5, diagrams-svg >= 0.7, diagrams-core >= 0.7, blaze-svg >= 0.3, vector-space >= 0.8, safecopy >= 0.8 && < 0.9, data-default >= 0.5, filepath >= 1.3, directory >= 1.2, bytestring >= 0.10, cereal >= 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010