name:                high-school-plotting
version:             0.2.0.0
synopsis:            Gui for the generation of usefully pedagogical math curves
-- description:
license:             BSD3
license-file:        LICENSE
author:              Chaddaï Fouché
maintainer:          chaddai.fouche@gmail.com
-- copyright:
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
Data-Files:          css/style.css

library
  exposed-modules:     Math.CurveGenerator, Math.TikzGenerator, Math.PSTricksGenerator, Math.SVGGenerator, Math.GeneratorTools
  build-depends:       base >= 4.7
                       , diagrams-lib >= 0.7
                       , text >=0.11
                       , data-default >= 0.5
                       , diagrams-svg >= 0.7
                       , diagrams-core >= 0.7
                       --, blaze-svg >= 0.3
                       , svg-builder
                       , safecopy >= 0.8
                       , data-default >= 0.5
                       , filepath >= 1.3
                       , directory >= 1.2
                       , bytestring >= 0.10
                       , cereal >= 0.4
                       , lens-simple
                       , linear
                       , lucid
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts, GADTs, TypeFamilies, OverloadedStrings

executable curveWebUI
  main-is:             Main.hs
  other-modules:       Widgets
  -- other-extensions:
  build-depends:       base
                     , diagrams-lib >= 0.7
                     , text >=0.11
                     , data-default >= 0.5
                     , diagrams-svg >= 0.7
                     , diagrams-core >= 0.7
                     , blaze-svg >= 0.3
                     , safecopy >= 0.8
                     , data-default >= 0.5
                     , filepath >= 1.3
                     , directory >= 1.2
                     , bytestring >= 0.10
                     , cereal >= 0.4
                     , lens-simple
                     , linear
                     , lucid
                     , threepenny-gui >= 0.5
                     , high-school-plotting
                     , neat-interpolation
 hs-source-dirs:      uiSrc
 default-language:    Haskell2010
 default-extensions:  FlexibleContexts, GADTs, TypeFamilies, OverloadedStrings
